# Project_FBD

./: IDEIAS.TXT  O_QUE_ALERAR.txt  README.md  Relatório Final BD.docx  app.py  config.py  dados.sql  pyproject.toml
Front_End/: events.html  homepage.html  login.html  pilots.html  records.html  teams.html
routes/: __init__.py  auth.py  diretor_corrida.py  diretor_equipa.py  public.py  tecnico_pista.py
static/css/: auth.css  base.css  dashboard.css  event-cards.css  events.css  forms.css  homepage.css  management.css  modal-tabs.css  records.css  settings.css  sidebar.css  tables.css  team-details.css  team-manager.css
templates/: WelcomeDC.html  WelcomeDE.html  WelcomeDP.html  WelcomeTP.html  carros_equipa.html  condicoes_pista.html  criar_equipa.html  criar_evento.html  eventos_atuais.html  eventos_equipa.html  eventos_passados.html  events.html  gerir_eventos.html  homepage.html  hpafterlogin.html  inscricao_sessao.html  login.html  pilotos_equipa.html  pilots.html  records.html  registar_voltas.html  register.html  settings.html  team_details.html  teams.html
utils/: __init__.py  database.py
