[project]
name = "project-fbd"
version = "0.1.0"
description = ""
authors = [
    {name = "TomasXavier06",email = "tnmxavier8@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "pyodbc (>=5.3.0,<6.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
